# vulkan_guide

./: Cargo.toml  build.rs
shaders/: colored_triangle.vert  colored_triangle.vert.spv  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  gradient.comp  mesh.frag  mesh.frag.spv  text_image.frag  text_image.frag.spv
src/: ash_bootstrap.rs  base_vulkan.rs  buffers.rs  camera.rs  debug.rs  descriptors.rs  lib.rs  loader.rs  main.rs  pipelines.rs  swapchain.rs  vk_imgui.rs
