[package]
name = "vulkan_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5"
winit = { version = "0.29", default-features = false, features = ["rwh_05"] }
glam = { version = "0.24", features = ["bytemuck", "mint"] }
ash = { git = "https://github.com/ash-rs/ash.git", features = ["loaded"] }
ash-window = { git = "https://github.com/ash-rs/ash.git" }
chrono = "0.4"
image = "0.24"
obj = "0.10"
rand = "0.8"
gpu-allocator = { git = "https://github.com/Sorrien/gpu-allocator", features = [
    "vulkan",
] }
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-rs-vulkan-renderer = { git = "https://github.com/Sorrien/imgui-rs-vulkan-renderer/", features = [
    "gpu-allocator",
    "dynamic-rendering",
] }
generational-arena = "0.2"

[dependencies.gltf]
version = "1"
features = ["names"]

[features]
validation_layers = []

[build-dependencies]
shaderc = "0.8"
